# em-connected-components

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt
cpp/: ascii2binary.cpp  bench-scan.cpp  binary2ascii.cpp  check-stars.cpp  compare-two-star-files.cpp  contraction.hpp  count-distinct-minsketch-computebound.cpp  count-nodes.cpp  defs.hpp  degree_distr.cpp  degrees.cpp  functional.hpp  gen-cliques.cpp  gen-cube.cpp  gen-er.cpp  gen-grid.cpp  gen-path.cpp  kruskal.hpp  max-node-id.cpp  measure-sibeyn.cpp  merge.cpp  preprocess-ram.cpp  preprocess.cpp  remove-self-loops.cpp  run-boruvka.cpp  run-fun-kkt.cpp  run-fun-sibeyn.cpp  run-fun-star.cpp  run-kruskal.cpp  run-remake.cpp  run-sibeyn-bundles.cpp  run-sibeyn.cpp  run-starcontractions.cpp  run-streamsibeyn.cpp  run-vectorfun.cpp  sibeyn.hpp  simpleshiftmap.hpp  stream-checks.hpp  stream-functional.hpp  stream-utils.hpp  (+8 more)
cpp/streaming/: FunctionalSubproblemManager.h  SibeynWithBundles.h  hungdefs.hpp
cpp/streaming/algorithms/: Boruvka.h
cpp/streaming/basecase/: BaseKruskal.h  BoundedIntervalKruskal.hpp  PipelinedKruskal.h  StreamKruskal.h
cpp/streaming/containers/: BoolStream.h  Bundles.h  EdgeSequence.h  EdgeStream.h  less_alloc_forward_sequence.h
cpp/streaming/contraction/: BaseContraction.h  BoruvkaContraction.h  KKTContraction.h  Sibeyn.hpp  StarContraction.h
cpp/streaming/distinct_elements/: ApplyMeans.h  ApplyMedians.h  BJKST.h  EstimateCollector.h  KSummary.h  MinSketch.h  SubcallWrapper.h  Tidemark.h  multiply_shift_hash.h
cpp/streaming/merging/: ComponentMerger.h
cpp/streaming/relabelling/: EdgeSorterRelabeller.h
cpp/streaming/transforms/: make_consecutively_filtered_stream.h  make_unique_stream.h
cpp/streaming/utils/: ForLoopSingleArg.h  Int32ArithmeticHashFamily.h  PowerOfTwoCoin.h  StreamFilter.h  StreamMerge.h  StreamPusher.h  StreamRandomNeighbour.h  StreamSplit.h  WeightedCoin.h
test/: CMakeLists.txt  TestContractions.cpp  TestEdgeSequence.cpp  TestLessAllocForwardSequence.cpp  TestMultiplyShiftHash64.cpp  TestPowerOfTwoCoin.cpp  TestSimpleShiftMap.cpp  TestStreamFilter.cpp  TestStreamMerge.cpp  TestStreamRandomNeighbour.cpp  TestTransforms.cpp
